infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: intelliflow
  labels:
    name: intelliflow
